@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2018/12/03 02:29:20 manu Exp $
+libexec/nagios/check_dnsmaster
