@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2018,v 1.5018 2018/12/03 02:20:36 manu Exp $
+$NetBSD: CHANGES-2018,v 1.5019 2018/12/03 02:29:20 manu Exp $
 
 Changes to the packages collection and infrastructure in 2018:
 
@@ -6987,3 +6987,4 @@ Changes to the packages collection and infrastructure in 2018:
 	Updated pkgtools/pkglint to 5.6.8 [rillig 2018-12-02]
 	Added www/p5-Net-Curl version 0.39 [manu 2018-12-03]
 	Added www/p5-LWP-Protocol-Net-Curl version 0.023 [manu 2018-12-03]
+	Added net/nagios-plugin-dnsmaster version 0.1 [manu 2018-12-03]
